[gd_scene load_steps=2 format=3 uid="uid://dgvi23umdq4y8"]

[ext_resource type="Script" path="res://Scripts/Components/mana_component.gd" id="1_ovusq"]

[node name="ManaComponent" type="Node3D"]
script = ExtResource("1_ovusq")

[node name="ManaRegeneration" type="Timer" parent="."]

[connection signal="timeout" from="ManaRegeneration" to="." method="_on_mana_regeneration_timeout"]
